force-app/main/default/objects/JobApplication__c/JobApplication__c.object-meta.xml
<CustomObject>
    <label>JobApplication</label>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>JobApplication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobApplications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>