force-app/main/default/objects/JobApplication__c/fields/ChildCount__c.field-meta.xml
<CustomField>
    <fullName>ChildCount__c</fullName>
    <label>ChildCount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>