force-app/main/default/objects/JobApplication__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <description>Apply for the job based on the Country</description>
    <label>country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>