force-app/main/default/objects/JobApplication__c/fields/CoverLetter__c.field-meta.xml
<CustomField>
    <fullName>CoverLetter__c</fullName>
    <label>CoverLetter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>