force-app/main/default/objects/JobApplication__c/fields/rating__c.field-meta.xml
<CustomField>
    <fullName>rating__c</fullName>
    <label>rating</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>