force-app/main/default/objects/JobApplication__c/fields/Recordcount__c.field-meta.xml
<CustomField>
    <fullName>Recordcount__c</fullName>
    <label>Recordcount</label>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>