force-app/main/default/objects/JobApplication__c/fields/TestRollUpSummary__c.field-meta.xml
<CustomField>
    <fullName>TestRollUpSummary__c</fullName>
    <label>TestRollUpSummary</label>
    <summaryFilterItems>
        <field>Review__c.Name</field>
        <operation>equals</operation>
        <value>good</value>
    </summaryFilterItems>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>