force-app/main/default/objects/JobApplication__c/fields/TotalRatng__c.field-meta.xml
<CustomField>
    <fullName>TotalRatng__c</fullName>
    <label>TotalRatng</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>